--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.5"
   },
   "devDependencies": {
